force-app/main/default/objects/conference360__Attendee_Group__c/conference360__Attendee_Group__c.object-meta.xml
<CustomObject>
    <label>Attendee Group</label>
    <nameField>
        <label>Attendee Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendee Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>