force-app/main/default/objects/conference360__Attendee_Group__c/fields/conference360__Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>conference360__Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Bill To Account on the Sales Document the Attendee Group was created from.</inlineHelpText>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attendee Groups</relationshipLabel>
    <relationshipName>Attendee_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>