force-app/main/default/objects/conference360__Attendee_Group__c/fields/conference360__Bill_To_Lead__c.field-meta.xml
<CustomField>
    <fullName>conference360__Bill_To_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Bill To Lead on the Sales Document the Attendee Group was created from.</inlineHelpText>
    <label>Bill To Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Attendee Groups</relationshipLabel>
    <relationshipName>Attendee_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>