force-app/main/default/objects/conference360__Attendee_Group__c/fields/conference360__Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Attendee Groups</relationshipLabel>
    <relationshipName>Attendee_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>