force-app/main/default/objects/conference360__Attendee_Group__c/fields/conference360__Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sales_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Sales Document the Attendee Group was created from.</inlineHelpText>
    <label>Sales Document</label>
    <referenceTo>bt_stripe__Sales_Document__c</referenceTo>
    <relationshipLabel>Attendee Groups</relationshipLabel>
    <relationshipName>Attendee_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>